--- a/coderise.web/index.html
+++ b/coderise.web/index.html
@@ -6,27 +6,29 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-
     <link rel="stylesheet" href="css/backbone-comments.css">
     <script src="js/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-
     <div class="container">
-      <h1>Code Rise</h1>
+        <h1>Code Rise</h1>
+        <p>This is an application which tends to help you with you code reviews and rise quality of you product</p>
+        <hr />
 
-      <p>This is an application which tends to help you with you code reviews and rise quality of you product</p>
-
-      <hr/>
-      
-      <div class="shelveset-count"></div>
-
-      <ul class="shelvesets">
-      </ul>
-
+        <div class="shelveset-count"></div>
+        <ul class="shelvesets"></ul>
     </div>
 
-  <script data-main="app/config" src="bower_components/requirejs/require.js"></script>
-
+    <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/vendor/underscore-min.js"></script>
+    <script src="js/vendor/backbone-min.js"></script>
+    <script src="js/vendor/markdown.js"></script>
+    <script src="js/vendor/ejs_0.9_alpha_1_production.js"></script>
+    <script src="js/vendor/moment.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/models/shelvesetModel.js"></script>
+    <script src="js/collections/shelvesetCollection.js"></script>
+    <script src="js/views/shelvesetView.js"></script>
 </body>
 </html>
